[gd_scene load_steps=11 format=3 uid="uid://dvbwhdgq4v6lv"]

[ext_resource type="Script" uid="uid://bbqco03qp2xj" path="res://scripts/npc/cordenador.gd" id="1_utw41"]
[ext_resource type="FontFile" uid="uid://dhq1kbwvasqme" path="res://assets/pixel_Fonte/pixelart.ttf" id="3_lxycr"]
[ext_resource type="Texture2D" uid="uid://bwvc37bwpip61" path="res://assets/Personagens/Coordenador/coordenador_pixilart-sprite.png" id="3_obk0a"]
[ext_resource type="Texture2D" uid="uid://dskrgf0rbjgw2" path="res://assets/Personagens/Coordenador/new_atlas_texture.tres" id="3_y8ssq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y1u0a"]
atlas = ExtResource("3_obk0a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxgku"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1u0a")
}, {
"duration": 1.0,
"texture": ExtResource("3_y8ssq")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_obk0a"]
radius = 9.5
height = 28.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1u0a"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 0.470588)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utw41"]
size = Vector2(102, 47)

[sub_resource type="LabelSettings" id="LabelSettings_utw41"]
font = ExtResource("3_lxycr")
shadow_size = 7
shadow_color = Color(0, 0, 0, 0.996078)

[node name="Cordenador" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_utw41")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gxgku")
autoplay = "default"
frame_progress = 0.81943

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 3)
shape = SubResource("CapsuleShape2D_obk0a")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CaixaDialogo" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 65.0
offset_top = 228.0
offset_right = 585.0
offset_bottom = 324.0
theme_override_styles/normal = SubResource("StyleBoxFlat_y1u0a")
autowrap_mode = 2

[node name="TextoDialogo" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 254.0
offset_right = 581.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 14
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="NomeLabel" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 231.0
offset_right = 245.0
offset_bottom = 254.0

[node name="Retrato" type="TextureRect" parent="CanvasLayer"]
offset_left = 73.0
offset_top = 248.0
offset_right = 133.0
offset_bottom = 307.0
stretch_mode = 5

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_utw41")

[node name="LabelIntera√ßao" type="Label" parent="."]
offset_left = -18.0
offset_top = -39.0
offset_right = 22.0
offset_bottom = -16.0
label_settings = SubResource("LabelSettings_utw41")
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
